fix various tired mind errors

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,12 +1,12 @@
 FROM arm32v7/python:3.9-alpine
 
-COPY bot /
-
-RUN apk add python3-dev gcc musl-dev
+RUN apk add python3-dev gcc musl-dev libffi-dev make
 RUN python3 -m ensurepip --default-pip
-#RUN python3 -m pip install --upgrade pip setuptools wheel
+RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install discord.py
 RUN python3 -m pip install DiscordUtils
 RUN python3 -m pip install SQLAlchemy
+
+COPY bot /
 
 ENTRYPOINT ["python3", "app.py"]
