--- a/Dockerfile.x86
+++ b/Dockerfile.x86
@@ -1,11 +1,9 @@
 FROM python:3.7-slim-buster
 
+COPY bot /
+RUN mkdir /data
 RUN python3 -m ensurepip --default-pip
 RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install discord.py
-RUN python3 -m pip install DiscordUtils
-RUN python3 -m pip install SQLAlchemy
-
-COPY bot /
+RUN python3 -m pip install -r /requirements.txt
 
 ENTRYPOINT ["python3", "app.py"]
